bdr.BDR2.scala.error
Erreur de compilation :
BDR2:6: error: type mismatch;
 found   : String("R")
 required: Boolean
      case"R" => droite(); avance()
          ^BDR2:7: error: type mismatch;
 found   : String("L")
 required: Boolean
      case"L" => gauche(); avance()
          ^BDR2:8: error: type mismatch;
 found   : String("I")
 required: Boolean
      case"I" => retourne(); avance()
          ^BDR2:9: error: type mismatch;
 found   : String("A")
 required: Boolean
      case"A" => avance()
          ^BDR2:10: error: type mismatch;
 found   : String("B")
 required: Boolean
      case"B" => avance(); avance()
          ^BDR2:11: error: type mismatch;
 found   : String("C")
 required: Boolean
      case"C" => avance(); avance(); avance()
          ^BDR2:12: error: type mismatch;
 found   : String("D")
 required: Boolean
      case"D" => avance(); avance(); avance(); avance()
          ^BDR2:13: error: type mismatch;
 found   : String("E")
 required: Boolean
      case"E" => avance(); avance(); avance(); avance(); avance()
          ^BDR2:14: error: type mismatch;
 found   : String("F")
 required: Boolean
      case"F" => avance(); avance(); avance(); avance(); avance(); avance()
          ^BDR2:15: error: type mismatch;
 found   : String("Z")
 required: Boolean
      case"Z" => recule()
          ^BDR2:16: error: type mismatch;
 found   : String("Y")
 required: Boolean
      case"Y" => recule(); recule()
          ^BDR2:17: error: type mismatch;
 found   : String("X")
 required: Boolean
      case"X" => recule(); recule(); recule()
          ^BDR2:18: error: type mismatch;
 found   : String("W")
 required: Boolean
      case"W" => recule(); recule(); recule(); recule()
          ^BDR2:19: error: type mismatch;
 found   : String("V")
 required: Boolean
      case"V" => recule(); recule(); recule(); recule(); recule()
          ^BDR2:20: error: type mismatch;
 found   : String("U")
 required: Boolean
      case"U" => recule(); recule(); recule(); recule(); recule(); recule()
          ^